// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tool-definition-serializer snapshots Chat wire shape for a planner tool (activate_card) 1`] = `
[
  {
    "function": {
      "description": "Activate one immediate child card.",
      "name": "activate_card",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "card_id": {
            "type": "string",
          },
        },
        "required": [],
        "type": "object",
      },
    },
    "type": "function",
  },
]
`;

exports[`tool-definition-serializer snapshots Chat wire shape for sample catalog tools 1`] = `
[
  {
    "function": {
      "description": "Search files by glob pattern.",
      "name": "glob",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "pattern": {
            "type": "string",
          },
        },
        "required": [],
        "type": "object",
      },
    },
    "type": "function",
  },
  {
    "function": {
      "description": "Create a direct child card.",
      "name": "create_card",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "title": {
            "type": "string",
          },
        },
        "required": [],
        "type": "object",
      },
    },
    "type": "function",
  },
  {
    "function": {
      "description": "List or load a skill.",
      "name": "skill",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "name": {
            "type": "string",
          },
        },
        "required": [],
        "type": "object",
      },
    },
    "type": "function",
  },
]
`;

exports[`tool-definition-serializer snapshots Codex wire shape for a planner tool (activate_card) 1`] = `
[
  {
    "description": "Activate one immediate child card.",
    "name": "activate_card",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "card_id": {
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "function",
  },
]
`;

exports[`tool-definition-serializer snapshots Codex wire shape for sample catalog tools 1`] = `
[
  {
    "description": "Search files by glob pattern.",
    "name": "glob",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "pattern": {
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "function",
  },
  {
    "description": "Create a direct child card.",
    "name": "create_card",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "title": {
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "function",
  },
  {
    "description": "List or load a skill.",
    "name": "skill",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "name": {
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "function",
  },
]
`;
